# EPAM-PYWEB

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yaml  docker-compose.yaml  docker_start.sh  entrypoint.sh  pyproject.toml
.github/workflows/: build-and-publish.yaml  deploy-lambda.yaml  deploy-to-ecs.yaml  lint-and-test.yaml  pipeline.yaml
alembic/: env.py
alembic/versions/: 2024-02-21_added_projects_table.py  2024-02-24_added_projects_table.py  2024-02-24_added_users_table.py  2024-02-28_added_logos_and_documents_tables.py  2024-02-29_added_documents_and_logos_tables.py  2024-03-11_updated_projects_and_documents_tables.py
lambda_handlers/: lambda_function.py
src/: __init__.py  config.py  database.py  main.py  models.py
src/auth/: router.py  schemas.py  service.py  utils.py
src/documents/: dependencies.py  models.py  router.py  schemas.py  service.py
src/files/: dependencies.py  schemas.py  service.py
src/logos/: dependencies.py  models.py  router.py  schemas.py  service.py
src/projects/: dependencies.py  models.py  router.py  schemas.py  service.py
src/users/: dependencies.py  models.py  router.py  schemas.py
src/users/auth/: service.py
src/utils/: auth.py
src/utils/aws/: s3.py
src/utils/logger/: config.json  main.py
tests/: conftest.py  test_health.py
tests/documents/: test_routes.py
tests/projects/: test_routes.py
