[tool.poetry]
name = "epam-pyweb"
version = "0.1.0"
description = ""
authors = ["Marko Kojic <kojicmarko96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.1"
pytest = "^8.0.0"
httpx = "^0.26.0"
pre-commit = "^3.6.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
  "F",     # pyflakes
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "I001",  # isort
  "C4",    # flake8-comprehensions
  "B",     # flake8-bugbear
  "ISC",   # flake8-implicit-str-concat
  "T20",   # flake8-print
]
lint.ignore = ["ISC001"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]